deployment/base/matrix/synapse-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-admin
  namespace: matrix
spec:
  selector:
    app.kubernetes.io/name: synapse-admin
  ports:
    - name: http
      port: 80
      targetPort: http
