deployment/base/matrix/synapse-admin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-admin
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix-admin.hauptspeicher.com`)
      kind: Rule
      services:
        - name: synapse-admin
          port: 80
  tls:
    certResolver: myresolver
